Loader in input

--- a/upload_no_encoded_v2.3.x-3.x/admin/view/stylesheet/attributico.css
+++ b/upload_no_encoded_v2.3.x-3.x/admin/view/stylesheet/attributico.css
@@ -173,3 +173,8 @@ table.form > tbody > tr > td {	/* for 1.5.x */
 /* .table tbody > tr > td {
     vertical-align: baseline;
 } */
+
+.loading {
+    background: url(../javascript/fancytree/skin-win7/loading.gif) no-repeat right center;
+    /* background-size: 16px 16px; */
+}
